# python_jupyter_notes

./: 20260117_花式索引.ipynb  chapter03_index.ipynb  chapter03_花式索引.ipynb  chapter04_broadcasting.ipynb  chapter05_ufuncs.ipynb  chapter06_ArrayTransformation.ipynb  chapter06_数组变形记.ipynb  chapter07_StatAggr.ipynb  chapter07_统计与聚合.ipynb  chapter08_LinearAlgebra.ipynb  chapter08_线性代数.ipynb  chaptor05_ufuncs.ipynb  pyproject.toml  uv_method.ipynb
.ipynb_checkpoints/: README-checkpoint.md  chapter03_index-checkpoint.ipynb  chapter03_花式索引-checkpoint.ipynb  chapter04_broadcasting-checkpoint.ipynb  chapter07_统计与聚合-checkpoint.ipynb  chapter08_LinearAlgebra-checkpoint.ipynb  chapter08_线性代数-checkpoint.ipynb  linalg_向量概念-checkpoint.ipynb  uv_method-checkpoint.ipynb
linalg_with_python/: Chapter 1 - Linear Equation System.ipynb  Chapter 2 - Basic Matrix Algebra.ipynb  Chapter 3 - Determinant.ipynb  Chapter 4 - LU Factorization.ipynb
linear_algebra_concept/: linalg_det.ipynb  linalg_det.py  linalg_eigenvalue.ipynb  linalg_eigenvalue.py  linalg_index.ipynb  linalg_vector.ipynb
linear_algebra_concept/.ipynb_checkpoints/: linalg_det-checkpoint.ipynb
numpy_func/: transpose.ipynb
pandas/: test_pandas.ipynb
python/: is_not_eq.py
