[project]
name = "python-jupyter-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.5.2",
    "jupyterlab-cell-flash>=0.4.0",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-git>=0.51.4",
    "jupyterlab-github>=4.0.0",
    "jupyterlab-lsp>=5.2.0",
    "jupyterlab-vim>=4.1.4",
    "jupyterthemes>=0.20.0",
    "jupytext>=1.19.1",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
]
